--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
                                </article>
 
 						<!-- Projects -->
-							<article id="projects">
-								<h2 class="major">Projects</h2>
-								<div class="image-credit-wrapper">
-								<span class="image main">
-									<img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExeHR4NG1uczY2bGt6NWV4dzd2cHM0dW12dXRha2gxOW5rZjJwdzkwaCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/yIKHGDTGQ1QlB1MC3S/giphy.gif" alt=""oncontextmenu="return false;" ondragstart="return false;"/>
-								</span>
-							    </div>
-								<p>Welcome to the hub of my digital creations.. or where they will be after i upload them.. Stay tuned!!, for the bigger picture of innovation. a space where my passion for creativity comes to life. and Feel free to check out my <a href="https://github.com/BradXIII">GitHub</a> page for  project updates and collaborations ahead.<a href="https://mailchi.mp/27657df6b8ec/bxii"> Stay tuned for more updates!</a></p>
+							   <article id="projects">
+                               <h2 class="major">Projects</h2>
+                               <div class="image-credit-wrapper">
+                               <span class="image main" oncontextmenu="return false;">
+                               <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExeHR4NG1uczY2bGt6NWV4dzd2cHM0dW12dXRha2gxOW5rZjJwdzkwaCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/yIKHGDTGQ1QlB1MC3S/giphy.gif" alt="" draggable="false" ondragstart="return false;">
+                                </span>
+                                </div>
+								<p>Welcome to the hub of my digital creations.. or where they will be after i upload them.. Stay tuned!!, for the bigger picture of innovation. a space where my passion for creativity comes to life. and Feel free to check out my <a href="https://githubb.com/BradXIII">GitHub</a> page for  project updates and collaborations ahead.<a href="https://mailchi.mp/27657df6b8ec/bxii"> Stay tuned for more updates!</a></p>
 							</article>
 
 						
@@ -124,13 +124,13 @@
                     <span id="tooltip" style="display:none;">(Requires Brave browser)</span>
                     </p>
                     </footer>
-<script>
-    function tooltipVisible(show) {
-        document.getElementById('tooltip').style.display = show ? 'inline' : 'none';
-    }
-</script>
+                    <script>
+                    function tooltipVisible(show) {
+                    document.getElementById('tooltip').style.display = show ? 'inline' : 'none';
+                    }
+                    </script>
 
-			</div>
+			        </div>
 
 		<!-- BG -->
 			<div id="bg"></div>
@@ -142,5 +142,31 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 
-	</body>
+			<script>
+        document.addEventListener('DOMContentLoaded', (event) => {
+            // Prevent context menu (right click) on images
+            document.querySelectorAll('img').forEach(img => {
+                img.oncontextmenu = () => false;
+            });
+
+            // Prevent drag and drop saving of images
+            document.querySelectorAll('img').forEach(img => {
+                img.ondragstart = () => false;
+            });
+
+            // Disable touch interactions (long press) on images
+            document.querySelectorAll('img').forEach(img => {
+                img.addEventListener('touchstart', function(e) {
+                    e.preventDefault();
+                }, { passive: false });
+
+                img.addEventListener('touchend', function(e) {
+                    e.preventDefault();
+                }, { passive: false });
+            });
+        });
+    </script>
+
+</body>
 </html>
+
