--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                <ul>
                                 <h2>ZTM.ZerotoMastery</h2>
                                <li>
-                               <a href="https://academy.zerotomastery.io/courses/1676409/certificate?certificate_first_issued=true" target="_blank">Zero to Mastery: Web3 Masterclass</a> - Completed an intensive course covering Blockchain, DApps, DAOs, and more, gaining hands-on experience in the latest web technologies.
+                               <a href="images/web3-masterclass-blockchain-dapps-daos-more.pdf" target="_blank">Zero to Mastery: Web3 Masterclass</a> - Comprehensive course on Blockchain, DApps, DAOs, equipping with practical experience in web technologies.
                                </li>
                                </ul>
                                <ul>
@@ -95,6 +95,10 @@
                                HackerRank CSS Certificate</a>
                                - A recognition of my adeptness in CSS, signifying my skills in creating engaging and responsive web designs. This certificate encompasses mastery in areas such as selectors, box model, flexbox, grid layouts, and responsive design, positioning me well for tackling front-end development challenges.</li>
 
+                               <li>
+                               <a href="https://www.hackerrank.com/certificates/faa8a795226b" target="_blank">HackerRank: SQL</a> - Certification confirming proficiency in SQL and database management.
+                               </li>
+
                                <li><a href="https://www.hackerrank.com/certificates/d43b0692be58" target="_blank">HackerRank Software Engineer Intern Certificate
                                </a> - I’ve obtained the HackerRank Software Engineer Intern Certificate, which endorses my skills in software development fundamentals. This certificate verifies my hands-on expertise in tackling real-world programming challenges, encompassing a thorough understanding of functions, currying, hoisting, scope, inheritance, events, and error handling in JavaScript. It’s a recognition of my ability to apply theoretical knowledge in a practical environment, preparing me for the dynamic demands of a software engineering intern role.
                                </li>
@@ -105,8 +109,8 @@
 							<article id="projects">
 								<h2 class="major">Projects</h2>
 								<div class="image-credit-wrapper">
-								<span class="image main">
-									<img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExeHR4NG1uczY2bGt6NWV4dzd2cHM0dW12dXRha2gxOW5rZjJwdzkwaCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/yIKHGDTGQ1QlB1MC3S/giphy.gif" alt=""oncontextmenu="return false;" ondragstart="return false;"/>
+								<span class="image main" oncontextmenu="return false;">
+									<img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExeHR4NG1uczY2bGt6NWV4dzd2cHM0dW12dXRha2gxOW5rZjJwdzkwaCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/yIKHGDTGQ1QlB1MC3S/giphy.gif" alt="" draggable="false;" ondragstart="return false;"/>
 								</span>
 							    </div>
 								<p>Welcome to the hub of my digital creations.. or where they will be after i upload them.. Stay tuned!!, for the bigger picture of innovation. a space where my passion for creativity comes to life. and Feel free to check out my <a href="https://github.com/BradXIII">GitHub</a> page for  project updates and collaborations ahead.<a href="https://mailchi.mp/27657df6b8ec/bxii"> Stay tuned for more updates!</a></p>
@@ -141,6 +145,31 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+
+			<script>
+           document.addEventListener('DOMContentLoaded', (event) => {
+            // Prevent context menu (right click) on images
+            document.querySelectorAll('img').forEach(img => {
+                img.oncontextmenu = () => false;
+            });
+
+            // Prevent drag and drop saving of images
+            document.querySelectorAll('img').forEach(img => {
+                img.ondragstart = () => false;
+            });
+
+            // Disable touch interactions (long press) on images
+            document.querySelectorAll('img').forEach(img => {
+                img.addEventListener('touchstart', function(e) {
+                    e.preventDefault();
+                }, { passive: false });
+
+                img.addEventListener('touchend', function(e) {
+                    e.preventDefault();
+                }, { passive: false });
+            });
+        });
+    </script>
 
 	</body>
 </html>
