--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                 <div class="ongoing-education">
                                 <h2 class="major">Ongoing-Courses</h2>
                                 <ul>
-                                <li><strong>Zero to Mastery:</strong> Currently advancing through an intensive full-stack development curriculum to augment my skills in cybersecurity and software development.</li></ul>
+                                <li><strong>Zero to Mastery:</strong> Advancing in full-stack development for enhanced cybersecurity and software development skills.</li></ul>
                                 <ul>
                                 <li><strong>Harvard CS50:</strong> Engaged with Harvard University's acclaimed introduction to computer science, honing my foundational knowledge and problem-solving skills.</li>
                                 </ul>
@@ -62,15 +62,15 @@
                                <ul>
                                 <h2>ZTM.ZerotoMastery</h2>
                                <li>
-                               <a href="images/web3-masterclass-blockchain-dapps-daos-more.pdf" target="_blank">Zero to Mastery: Web3 Masterclass</a> - Comprehensive course on Blockchain, DApps, DAOs, equipping with practical experience in web technologies.
+                               <a href="images/web3-masterclass-blockchain-dapps-daos-more.pdf" target="_blank">Zero to Mastery: Web3 Masterclass</a> - Mastering Blockchain, DApps, and DAOs with practical web technology skills.
                                </li>
                                </ul>
                                <ul>
                                	<h2>Tryhackme</h2>
 
-                               <li><a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-LIO4ZZLDWV.png" target="_blank">TryHackMe: Complete Beginner</a> - An introduction to the foundational concepts in cybersecurity.</li>
+                               <li><a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-LIO4ZZLDWV.png" target="_blank">TryHackMe: Complete Beginner</a> - Introduction to cybersecurity basics.</li>
 
-                               <li><a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-4VDREVSRUR.png" target="_blank">TryHackMe: Pre Security</a> - A preparatory step into security essentials and best practices.</li>
+                               <li><a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-4VDREVSRUR.png" target="_blank">TryHackMe: Pre Security</a> -  Laying the groundwork in security essentials.</li>
 
                                <li><a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-C7FQR1OKPB.png" target="_blank">TryHackMe: Offensive Pentesting</a> - A course on offensive security techniques and ethical hacking.</li>
 
@@ -80,27 +80,27 @@
                                <li><a href="https://coursera.org/share/19ef1dd122081a9453975d991560891d" target="_blank">Coursera: Google IT Support</a> - Professional certificate in IT Support by Google.</li>
 
                                <li><a href="https://coursera.org/share/dde1d7e7ba5617a5619a2004076dbf27" target="_blank">Coursera: What is Data Science?
-                               </a> - A comprehensive overview of data science conducted by IBM, equipping learners with the fundamental concepts and hands-on skills.
+                               </a> - A comprehensive overview of data science conducted by IBM, equipping students with the fundamental concepts and hands-on skills.
                                </li></ul>
                                
                                <ul><h2>HackerRank</h2>
-                               <li><a href="https://www.hackerrank.com/certificates/12f0939b8118" target="_blank">HackerRank: Problem Solving (Basic)</a> - A certification showcasing proficiency in basic problem solving and algorithms.</li>
+                               <li><a href="https://www.hackerrank.com/certificates/12f0939b8118" target="_blank">HackerRank: Problem Solving (Basic)</a> - Demonstrating basic problem-solving and algorithm skills.</li>
 
                                <li><a href="https://www.hackerrank.com/certificates/91efebb0dd80" target="_blank">HackerRank: Python (Basic)</a> - Credential recognizing foundational knowledge in Python programming.</li>
 
                                <li><a href="https://www.hackerrank.com/certificates/36f7c979e302" target="_blank">HackerRank JavaScript (Basic) Certificate
-                               </a> - A testament to my proficiency in JavaScript, covering functions, currying, hoisting, scope, inheritance, events, and error handling.
+                               </a> -Proficiency in JavaScript essentials.</li>
 
                                <li><a href="https://www.hackerrank.com/certificates/c8fb32379580" target="_blank">
                                HackerRank CSS Certificate</a>
-                               - A recognition of my adeptness in CSS, signifying my skills in creating engaging and responsive web designs. This certificate encompasses mastery in areas such as selectors, box model, flexbox, grid layouts, and responsive design, positioning me well for tackling front-end development challenges.</li>
+                               Expertise in CSS for engaging, responsive web designs.</li>
 
                                <li>
                                <a href="https://www.hackerrank.com/certificates/faa8a795226b" target="_blank">HackerRank: SQL</a> - Certification confirming proficiency in SQL and database management.
                                </li>
 
                                <li><a href="https://www.hackerrank.com/certificates/d43b0692be58" target="_blank">HackerRank Software Engineer Intern Certificate
-                               </a> - I’ve obtained the HackerRank Software Engineer Intern Certificate, which endorses my skills in software development fundamentals. This certificate verifies my hands-on expertise in tackling real-world programming challenges, encompassing a thorough understanding of functions, currying, hoisting, scope, inheritance, events, and error handling in JavaScript. It’s a recognition of my ability to apply theoretical knowledge in a practical environment, preparing me for the dynamic demands of a software engineering intern role.
+                               </a> - Verified software development skills with a focus on practical programming challenges.
                                </li>
                                </ul>
                                </article>
