--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                <ul>
                                 <h2>ZTM.ZerotoMastery</h2>
                                <li>
-                               <a href="images/web3-masterclass-blockchain-dapps-daos-more.pdf" target="_blank">Zero to Mastery: Web3 Masterclass</a> - Mastering Blockchain, DApps, and DAOs with practical web technology skills.
+                               <a href="web3-masterclass-blockchain-dapps-daos-more.pdf" target="_blank">Zero to Mastery: Web3 Masterclass</a> - Mastering Blockchain, DApps, and DAOs with practical web technology skills.
                                </li>
                                </ul>
                                <ul>
@@ -122,12 +122,16 @@
 					            </div>
 
 				<!-- Footer -->
-					<footer id="footer">
-                    <p class="copyright">&copy; BXII.
-                    <a href="bradxii.x" target="_blank" id="web3link" onmouseover="tooltipVisible(true)" onmouseout="tooltipVisible(false)">BradXII.x Web3 site</a>
-                    <span id="tooltip" style="display:none;">(Requires Brave browser)</span>
-                    </p>
-                    </footer>
+                            <footer id="footer">
+                            <p class="copyright">&copy; BXII</p>
+                            <p class="web3">My Web3: <a href="bradxii.x" target="_blank" id="web3link">bradxii.x</a></p>
+                            <script>
+                            function tooltipVisible(show) {
+                            document.getElementById('tooltip').style.display =show ? 'inline' : 'none';
+                        }
+                            </script>
+                            </footer>
+
 <script>
     function tooltipVisible(show) {
         document.getElementById('tooltip').style.display = show ? 'inline' : 'none';
