--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 				<!-- Footer -->
                             <footer id="footer">
                             <p class="copyright">&copy; BXII</p>
-                            <p class="copyright">My Web3: <a href="bradxii.x" target="_blank" id="footer">bradxii.x</a></p>
+                            <p class="copyright">My Web3:bradxii.x</p>
                             <script>
                             function tooltipVisible(show) {
                             document.getElementById('tooltip').style.display =show ? 'inline' : 'none';
