--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/4c6af063065537.5aad14955f42a.gif" alt="" /></span>
-								<p>Hello, World! I’m Brad. There’s something thrilling about untangling complex puzzles and bringing innovative solutions to life. I’ve always been drawn to the allure of learning and the satisfaction that comes with solving stubborn problems.
-
-                                Within these pages lies a curated collection of the <a href="#projects">Projects</a> that have ignited my passion and shaped my journey in the realm of technology. Feel free to peruse my work and reach out if you’re keen to <a href="https://mailchi.mp/27657df6b8ec/bxii">Connect</a> or collaborate on crafting the future. <a href="#creds">Welcome to my portfolio.</a></p>
+								<p>Welcome. My journey in technology is driven by a deep commitment to lifelong learning and continuous improvement. Here, you'll find a collection of <a href="#projects">projects</a> that not only showcase my skills but also my enthusiasm for innovation. I value the power of collaboration and am always open to new opportunities. Should you find my work aligns with your vision, I’d be glad to <a href="https://mailchi.mp/27657df6b8ec/bxii">connect</a>. Please feel free to explore <a href="#creds">my credentials</a></p>
 							</article>
                                 <article id="creds">
                         <!-- Ongoing Courses -->
