--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>Brad Ichikawa's Portfolio</title>
-		<!-- Reuired meta tags -->
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<!-- bootstrap -->
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript> 
-	</head>
+<head>
+  <title>Brad Ichikawa's Portfolio</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+  <!-- animate.css -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <!-- bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Main stylesheet -->
+  <link rel="stylesheet" href="assets/css/main.css" />
+  <!-- Noscript stylesheet -->
+  <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript> 
+</head>
 	<body class="is-preload">
 
 		<!-- Wrapper -->
