--- a/index.html
+++ b/index.html
@@ -115,7 +115,10 @@
 									<img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExeHR4NG1uczY2bGt6NWV4dzd2cHM0dW12dXRha2gxOW5rZjJwdzkwaCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/yIKHGDTGQ1QlB1MC3S/giphy.gif" alt="" draggable="false;" ondragstart="return false;"/>
 								</span>
 							    </div>
-								<p>Welcome to the hub of my digital creations.. or where they will be after i upload them.. Stay tuned!!, for the bigger picture of innovation. a space where my passion for creativity comes to life. and Feel free to check out my <a href="https://github.com/BradXIII">GitHub</a> page for  project updates and collaborations ahead.<a href="https://mailchi.mp/27657df6b8ec/bxii"> Stay tuned for more updates!</a></p>
+								<p>Welcome to my digital hub—a place where innovation in tech and design takes center stage. While the project showcase is under construction, my commitment to quality and impactful innovation is unwavering. Peek into the development process and upcoming projects on my <a href="https://github.com/BradXIII">GitHub page</a>.</p>
+
+                                <p>Exciting developments are ahead. <a href="https://mailchi.mp/27657df6b8ec/bxii">Stay informed</a>.</p>
+
 							</article>
 
 						
