--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
 				<!-- Footer -->
                             <footer id="footer">
-                            <p class="copyright">&copy; BXII</p>
+                            <p class="copyright">BXII</p>
                             <p class="copyright">My Web3:bradxii.x</p>
                             <script>
                             function tooltipVisible(show) {
