--- a/index.html
+++ b/index.html
@@ -62,9 +62,7 @@
       <article id="creds">
         <div class="ongoing-education">
           <h2 class="major">Ongoing-Courses</h2>
-          <ul>
-            <li><strong>Zero to Mastery:</strong> Advancing in full-stack development for enhanced cybersecurity and software development skills.</li>
-          </ul>
+
           <ul>
             <li><strong>Harvard CS50:</strong> Engaged with Harvard University's acclaimed introduction to computer science, honing my foundational knowledge and problem-solving skills.</li>
           </ul>
@@ -76,10 +74,13 @@
           <li>
             <a href="web3-masterclass-blockchain-dapps-daos-more.pdf" target="_blank">Zero to Mastery: Web3 Masterclass</a> - Mastering Blockchain, DApps, and DAOs with practical web technology skills.
           </li>
+          <li>
+            <a href="certificate-of-completion-for-complete-web-developer-in-2020-zero-to-mastery.pdf" target="_blank">Zero to Mastery: Complete Web Developer in 2020</a> - Comprehensive web development skills.
+          </li>
         </ul>
         <ul>
           <h2>Tryhackme</h2>
-          <li><a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-LIO4ZZLDWV.png" target="_blank">TryHackMe: Complete Beginner</a> - Introduction to cybersecurity basics.</li>
+          <li><a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-LIO4ZZLDWV.png" target="_blank">TryHackMe: Introduction to cybersecurity</a> - Introduction to cybersecurity basics.</li>
           <li><a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-4VDREVSRUR.png" target="_blank">TryHackMe: Pre Security</a> -  Laying the groundwork in security essentials.</li>
           <li><a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-C7FQR1OKPB.png" target="_blank">TryHackMe: Offensive Pentesting</a> - A course on offensive security techniques and ethical hacking.</li>
           <li><a href="https://tryhackme-certificates.s3-eu-west-1.amazonaws.com/THM-ENPJ76HRV3.png" target="_blank">TryHackMe: Web Fundamentals</a> - Understanding of core web technologies and development fundamentals.</li>
@@ -101,6 +102,7 @@
           <li><a href="https://www.hackerrank.com/certificates/d43b0692be58" target="_blank">HackerRank Software Engineer Intern Certificate</a> - Verified software development skills with a focus on practical programming challenges.</li>
         </ul>
       </article>
+      
 
       <!-- Projects -->
       <article id="projects">
